# rimeapi.lua

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  action.patch  api_test.lua  build.sh  get-rime.ps1  rime_api_console.lua  rime_deployer.lua  rimeapi.annotation.lua  rimeapi.app.lua  rimeapi.jit.app.lua  rimeapi.lua  rimeapi_ffi.lua  schema_tester.lua  schema_tester_config.lua  test.lua  test_rime.lua  xmake.lua
.github/workflows/: ci.yml
scripts/: api_test.lua  levers_api_test.lua  test_rime.lua
shared/: api_test.yaml
src/: line_editor.cc  line_editor.h  lua.cc  lua.h  lua_templates.h  main.cpp  noti_bridge.cpp  utils.h
